--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@waterloop/cms-client-api": "../cms-client-api/",
+    "axios": "^0.21.1",
+    "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
@@ -15,6 +16,7 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "socket.io-client": "2.3.0",
     "styled-components": "^5.2.1"
   },
   "scripts": {
