--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "socket.io-client": "2.3.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "typeface-ibm-plex-sans": "^1.1.13"
   },
   "scripts": {
     "start": "react-scripts start",
