--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cms-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://waterloop-cms.herokuapp.com",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
