added deploy script

--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "predeploy": "react-scripts build",
+    "deploy": "mv ./build ../cms-server/frontend/build"
   },
   "eslintConfig": {
     "extends": [
