--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cms-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/",
   "proxy": "https://waterloop-cms.herokuapp.com",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -16,6 +17,7 @@
     "react": "^16.13.1",
     "react-datepicker": "^3.5.0",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
