--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "redux-devtools-extension": "^2.13.8",
     "socket.io-client": "2.3.0",
     "styled-components": "^5.2.1",
-    "typeface-ibm-plex-sans": "^1.1.13"
+    "typeface-ibm-plex-sans": "^1.1.13",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
