--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
+    "dompurify": "^2.2.9",
+    "draft-convert": "^2.1.11",
+    "draft-js": "^0.11.7",
     "form-data": "^4.0.0",
     "moment": "^2.29.1",
     "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-datepicker": "^3.5.0",
     "react-dom": "^16.13.1",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
