--- a/package.json
+++ b/package.json
@@ -13,12 +13,33 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
+    "@google-cloud/storage": "^5.7.4",
     "axios": "^0.21.1",
     "draft-convert": "^2.1.11",
     "draft-js": "^0.11.7",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
+    "express": "^4.17.1",
+    "express-pg-session": "^1.1.0",
+    "express-session": "^1.17.1",
+    "express-validator": "^6.6.1",
+    "google-auth-library": "^7.0.3",
+    "googleapis": "^79.0.0",
+    "knex": "^0.21.5",
+    "md5": "^2.3.0",
+    "dotenv": "^8.2.0",
     "form-data": "^4.0.0",
     "moment": "^2.29.1",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.4",
+    "pg": "^8.5.1",
+    "pg-connection-string": "^2.4.0",
+    "postgres": "^1.0.2",
     "ramda": "^0.27.1",
+    "socket.io": "^2.4.1",
     "react": "^16.13.1",
     "react-datepicker": "^3.5.0",
     "react-dom": "^16.13.1",
@@ -35,7 +56,7 @@
     "yarn": "^1.22.10"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env PORT=3000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -43,8 +64,30 @@
     "lint:fix": "eslint . --fix",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "predeploy": "cross-env NODE_ENV=production react-scripts build",
-    "deploy": "rm -rf ../cms-server/frontend/build &&  mv ./build ../cms-server/frontend/build"
+    "test:unit": "cross-env NODE_ENV=test cross-env PORT=9000 mocha -r esm ./src/backend/tests/unit/*",
+    "test:integration": "cross-env NODE_ENV=test cross-env PORT=9000 mocha -r esm --exit ./src/backend/tests/integration/*",
+    "test:integration:specific": "cross-env NODE_ENV=test cross-env PORT=9000 mocha -r esm --exit",
+    "test:integration:watch": "cross-env NODE_ENV=test cross-env PORT=9000 mocha -r esm --watch ./src/backend/tests/integration/*",
+    "test:all": "yarn test:unit && yarn test:integration",
+    "docker:test": "docker-compose run --service-ports test-db ",
+    "docker:dev": "docker-compose run --service-ports dev-db ",
+    "dev": "yarn migrate && yarn seed && cross-env NODE_ENV=development nodemon --exec ./node_modules/.bin/babel-node src/backend/index.js",
+    "prebuild": "node ./src/scripts/generate-gcp-key.js",
+    "build:backend": "cross-env NODE_ENV=production babel src/backend --out-dir lib --copy-files",
+    "start:backend": "cross-env NODE_ENV=production babel-node lib/index.js",
+    "deploy": "git push heroku master",
+    "migrate": "knex migrate:latest ",
+    "seed:dev": "cross-env NODE_ENV=development knex seed:run",
+    "seed": "knex seed:run",
+    "seed:make": "knex seed:make",
+    "migrate:make": "knex migrate:make",
+    "development:migrate:rollback": "cross-env NODE_ENV=development knex migrate:rollback",
+    "production:migrate:rollback": "cross-env NODE_ENV=production knex migrate:rollback",
+    "production:migrate:latest": "cross-env NODE_ENV=production knex migrate:latest",
+    "production:seed": "cross-env NODE_ENV=production knex seed:run",
+    "test:migrate:rollback": "cross-env NODE_ENV=test knex migrate:rollback",
+    "test:migrate:latest": "cross-env NODE_ENV=test knex migrate:latest",
+    "test:seed": "cross-env NODE_ENV=test knex seed:run"
   },
   "browserslist": {
     "production": [
@@ -61,6 +104,9 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/eslint-parser": "^7.11.5",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/register": "^7.12.10",
     "@storybook/addon-actions": "^6.1.11",
     "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-links": "^6.1.11",
@@ -72,6 +118,8 @@
     "@testing-library/user-event": "^7.1.2",
     "babel-loader": "8.1.0",
     "cross-env": "^7.0.3",
+    "esm": "^3.2.25",
+    "mocha": "^8.2.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
