--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "homepage": "/",
   "engines": {
-    "node": ">=16.0.0",
+    "node": "=16.*",
     "npm": "please-use-yarn",
-    "yarn": ">=1.0.0"
+    "yarn": "=1.*"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -52,8 +52,7 @@
     "redux-devtools-extension": "^2.13.8",
     "socket.io-client": "2.3.0",
     "styled-components": "^5.2.1",
-    "typeface-ibm-plex-sans": "^1.1.13",
-    "yarn": "^1.22.10"
+    "typeface-ibm-plex-sans": "^1.1.13"
   },
   "scripts": {
     "start": "cross-env PORT=3000 react-scripts start",
