Attempt to fix heroku build issue

--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "typeface-ibm-plex-sans": "^1.1.13"
   },
   "scripts": {
-    "start": "cross-env PORT=3000 react-scripts start",
-    "build": "react-scripts build",
+    "start:frontend": "cross-env PORT=3000 react-scripts start",
+    "build:frontend": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
@@ -70,10 +70,10 @@
     "docker:test": "docker-compose run --service-ports test-db ",
     "docker:dev": "docker-compose run --service-ports dev-db ",
     "dev": "yarn migrate && yarn seed && cross-env NODE_ENV=development nodemon --exec ./node_modules/.bin/babel-node src/backend/index.js",
-    "prebuild": "node ./src/scripts/generate-gcp-key.js",
-    "build:backend": "cross-env NODE_ENV=production babel src/backend --out-dir lib --copy-files",
-    "start:backend": "cross-env NODE_ENV=production babel-node lib/index.js",
-    "deploy": "git push heroku master",
+    "prebuild": "yarn build:frontend && node ./src/backend/scripts/generate-gcp-key.js",
+    "build": "cross-env NODE_ENV=production babel src/backend --out-dir lib --copy-files",
+    "start": "cross-env NODE_ENV=production babel-node lib/index.js",
+    "deploy": "git push heroku main",
     "migrate": "knex migrate:latest ",
     "seed:dev": "cross-env NODE_ENV=development knex seed:run",
     "seed": "knex seed:run",
