Minimize babel modules and update script knexfile path

--- a/package.json
+++ b/package.json
@@ -7,52 +7,6 @@
     "node": "=16.*",
     "yarn": "=1.*"
   },
-  "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.11.2",
-    "@mui/icons-material": "^5.3.1",
-    "@mui/material": "^5.4.0",
-    "@google-cloud/storage": "^5.7.4",
-    "axios": "^0.21.2",
-    "draft-convert": "^2.1.11",
-    "draft-js": "^0.11.7",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "csurf": "^1.11.0",
-    "express": "^4.17.1",
-    "express-pg-session": "^1.1.0",
-    "express-session": "^1.17.1",
-    "express-validator": "^6.6.1",
-    "google-auth-library": "^7.0.3",
-    "googleapis": "^79.0.0",
-    "knex": "^0.21.5",
-    "md5": "^2.3.0",
-    "dotenv": "^8.2.0",
-    "form-data": "^4.0.0",
-    "moment": "^2.29.2",
-    "multer": "^1.4.2",
-    "nodemon": "^2.0.4",
-    "pg": "^8.5.1",
-    "pg-connection-string": "^2.4.0",
-    "postgres": "^1.0.2",
-    "ramda": "^0.27.1",
-    "socket.io": "^2.4.1",
-    "react": "^16.13.1",
-    "react-datepicker": "^3.5.0",
-    "react-dom": "^16.13.1",
-    "react-draft-wysiwyg": "^1.14.7",
-    "react-google-login": "^5.2.2",
-    "react-redux": "^7.2.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "socket.io-client": "2.3.0",
-    "styled-components": "^5.2.1",
-    "typeface-ibm-plex-sans": "^1.1.13"
-  },
   "scripts": {
     "start:frontend": "cross-env PORT=3000 react-scripts start",
     "build:frontend": "react-scripts build",
@@ -74,18 +28,65 @@
     "build": "cross-env NODE_ENV=production babel src/backend --out-dir lib --copy-files",
     "start": "cross-env NODE_ENV=production babel-node lib/index.js",
     "deploy": "git push heroku main",
-    "migrate": "knex migrate:latest ",
+    "migrate": "knex migrate:latest --knexfile src/backend/knexfile.js",
     "seed:dev": "cross-env NODE_ENV=development knex seed:run",
-    "seed": "knex seed:run",
-    "seed:make": "knex seed:make",
-    "migrate:make": "knex migrate:make",
-    "development:migrate:rollback": "cross-env NODE_ENV=development knex migrate:rollback",
+    "seed": "knex seed:run --knexfile src/backend/knexfile.js",
+    "seed:make": "knex seed:make --knexfile src/backend/knexfile.js",
+    "migrate:make": "knex migrate:make --knexfile src/backend/knexfile.js",
+    "development:migrate:rollback": "cross-env NODE_ENV=development knex migrate:rollback --knexfile src/backend/knexfile.js",
     "production:migrate:rollback": "cross-env NODE_ENV=production knex migrate:rollback",
     "production:migrate:latest": "cross-env NODE_ENV=production knex migrate:latest",
     "production:seed": "cross-env NODE_ENV=production knex seed:run",
-    "test:migrate:rollback": "cross-env NODE_ENV=test knex migrate:rollback",
-    "test:migrate:latest": "cross-env NODE_ENV=test knex migrate:latest",
-    "test:seed": "cross-env NODE_ENV=test knex seed:run"
+    "test:migrate:rollback": "cross-env NODE_ENV=test knex migrate:rollback --knexfile src/backend/knexfile.js",
+    "test:migrate:latest": "cross-env NODE_ENV=test knex migrate:latest --knexfile src/backend/knexfile.js",
+    "test:seed": "cross-env NODE_ENV=test knex seed:run --knexfile src/backend/knexfile.js"
+  },
+  "dependencies": {
+    "@babel/node": "^7.17.10",
+    "@google-cloud/storage": "^5.7.4",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.4.0",
+    "axios": "^0.21.2",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
+    "dotenv": "^8.2.0",
+    "draft-convert": "^2.1.11",
+    "draft-js": "^0.11.7",
+    "express": "^4.17.1",
+    "express-pg-session": "^1.1.0",
+    "express-session": "^1.17.1",
+    "express-validator": "^6.6.1",
+    "form-data": "^4.0.0",
+    "google-auth-library": "^7.0.3",
+    "googleapis": "^79.0.0",
+    "knex": "^0.21.5",
+    "md5": "^2.3.0",
+    "moment": "^2.29.2",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.4",
+    "pg": "^8.5.1",
+    "pg-connection-string": "^2.4.0",
+    "postgres": "^1.0.2",
+    "ramda": "^0.27.1",
+    "react": "^16.13.1",
+    "react-datepicker": "^3.5.0",
+    "react-dom": "^16.13.1",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-google-login": "^5.2.2",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "socket.io": "^2.4.1",
+    "socket.io-client": "2.3.0",
+    "styled-components": "^5.2.1",
+    "typeface-ibm-plex-sans": "^1.1.13"
   },
   "browserslist": {
     "production": [
@@ -100,11 +101,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/eslint-parser": "^7.11.5",
-    "@babel/node": "^7.10.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/register": "^7.12.10",
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.17.12",
+    "@babel/preset-env": "^7.17.12",
     "@storybook/addon-actions": "^6.1.11",
     "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-links": "^6.1.11",
@@ -114,13 +113,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "babel-loader": "8.1.0",
     "cross-env": "^7.0.3",
-    "esm": "^3.2.25",
-    "mocha": "^8.2.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4"
+    "eslint-plugin-prettier": "^3.1.4",
+    "esm": "^3.2.25",
+    "mocha": "^8.2.0"
   }
 }
