Add miscellaneous bugfixes / styling changes

--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "start": "cross-env NODE_ENV=production babel-node lib/index.js",
     "deploy": "git push heroku main",
     "migrate": "knex migrate:latest --knexfile src/backend/knexfile.js",
-    "seed:dev": "cross-env NODE_ENV=development knex seed:run",
+    "seed:dev": "cross-env NODE_ENV=development knex seed:run --knexfile src/backend/knexfile.js",
     "seed": "knex seed:run --knexfile src/backend/knexfile.js",
     "seed:make": "knex seed:make --knexfile src/backend/knexfile.js",
     "migrate:make": "knex migrate:make --knexfile src/backend/knexfile.js",
     "development:migrate:rollback": "cross-env NODE_ENV=development knex migrate:rollback --knexfile src/backend/knexfile.js",
-    "production:migrate:rollback": "cross-env NODE_ENV=production knex migrate:rollback",
-    "production:migrate:latest": "cross-env NODE_ENV=production knex migrate:latest",
-    "production:seed": "cross-env NODE_ENV=production knex seed:run",
+    "production:migrate:rollback": "cross-env NODE_ENV=production knex migrate:rollback --knexfile src/backend/knexfile.js",
+    "production:migrate:latest": "cross-env NODE_ENV=production knex migrate:latest --knexfile src/backend/knexfile.js",
+    "production:seed": "cross-env NODE_ENV=production knex seed:run --knexfile src/backend/knexfile.js",
     "test:migrate:rollback": "cross-env NODE_ENV=test knex migrate:rollback --knexfile src/backend/knexfile.js",
     "test:migrate:latest": "cross-env NODE_ENV=test knex migrate:latest --knexfile src/backend/knexfile.js",
     "test:seed": "cross-env NODE_ENV=test knex seed:run --knexfile src/backend/knexfile.js"
