--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
   "dependencies": {
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.17.12",
-    "@babel/preset-env": "^7.17.12",
     "@babel/node": "^7.17.10",
+    "@babel/preset-env": "^7.17.12",
     "@google-cloud/storage": "^5.7.4",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
@@ -68,6 +68,7 @@
     "form-data": "^4.0.0",
     "google-auth-library": "^7.0.3",
     "googleapis": "^79.0.0",
+    "js-cookie": "^3.0.1",
     "knex": "^0.21.5",
     "md5": "^2.3.0",
     "moment": "^2.29.2",
