--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "yarn": "=1.*"
   },
   "scripts": {
+    "postinstall": "node fix.js",
     "start:frontend": "cross-env PORT=3000 react-scripts start",
     "build:frontend": "react-scripts build",
     "test": "react-scripts test",
@@ -46,18 +47,15 @@
     "@babel/core": "^7.17.12",
     "@babel/node": "^7.17.10",
     "@babel/preset-env": "^7.17.12",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@google-cloud/storage": "^5.7.4",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
     "axios": "^0.21.2",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "draft-convert": "^2.1.11",
     "draft-js": "^0.11.7",
@@ -74,9 +72,8 @@
     "moment": "^2.29.2",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
-    "pg": "^8.5.1",
+    "pg": "^8.8.0",
     "pg-connection-string": "^2.4.0",
-    "postgres": "^1.0.2",
     "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-datepicker": "^3.5.0",
@@ -87,11 +84,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "socket.io": "^2.4.1",
-    "socket.io-client": "2.3.0",
     "styled-components": "^5.2.1",
-    "typeface-ibm-plex-sans": "^1.1.13"
+    "typeface-ibm-plex-sans": "^1.1.13",
+    "redux-devtools-extension": "^2.13.8"
   },
   "browserslist": {
     "production": [
@@ -115,6 +110,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
