--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,6 +14,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: yarn
+      - name: Setup docker-compose
+      - uses: KengoTODA/actions-setup-docker-compose@main
+        with:
+          version: '2.12.2'
       - name: Install dependencies
         run: yarn install --frozen-lockfile
       - name: Setup Docker container
