--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
       - name: Setup docker-compose
-      - uses: KengoTODA/actions-setup-docker-compose@main
+        uses: KengoTODA/actions-setup-docker-compose@main
         with:
           version: '2.12.2'
       - name: Install dependencies
