--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,9 +15,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
       - name: Setup docker-compose
-        uses: KengoTODA/actions-setup-docker-compose@main
-        with:
-          version: '2.12.2'
+        uses: KengoTODA/actions-setup-docker-compose@v1.0.9
       - name: Install dependencies
         run: yarn install --frozen-lockfile
       - name: Setup Docker container
