--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prebuild": "yarn build:frontend && node ./src/backend/scripts/generate-gcp-key.js",
     "build": "cross-env NODE_ENV=production babel src/backend --out-dir lib --copy-files",
     "start": "cross-env NODE_ENV=production babel-node lib/index.js",
-    "deploy": "git push heroku main",
+    "deploy": "fly deploy",
     "migrate": "knex migrate:latest --knexfile src/backend/knexfile.js",
     "seed:dev": "cross-env NODE_ENV=development knex seed:run --knexfile src/backend/knexfile.js",
     "seed": "knex seed:run --knexfile src/backend/knexfile.js",
@@ -85,8 +85,7 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
-    "typeface-ibm-plex-sans": "^1.1.13",
-    "redux-devtools-extension": "^2.13.8"
+    "typeface-ibm-plex-sans": "^1.1.13"
   },
   "browserslist": {
     "production": [
@@ -117,6 +116,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "esm": "^3.2.25",
-    "mocha": "^8.2.0"
+    "mocha": "^8.2.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
