modify yarn.lock files pt 2

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,14 @@ yarn-error.log*
 
 package-lock.json
 
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 # backend
 lib/
 *.sqlite3
