--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "docker:dev": "docker-compose run --service-ports dev-db ",
     "dev": "yarn migrate && yarn seed && cross-env NODE_ENV=development nodemon --ignore ./src/frontend --ignore ./src/index.js --exec ./node_modules/.bin/babel-node src/backend/index.js",
     "prebuild": "yarn build:frontend && node ./src/backend/scripts/generate-gcp-key.js",
-    "build": "cross-env NODE_ENV=production babel src/backend --out-dir lib --copy-files",
+    "build": "yarn prebuild && cross-env NODE_ENV=production babel src/backend --out-dir lib --copy-files",
     "start": "cross-env NODE_ENV=production babel-node lib/index.js",
     "deploy": "fly deploy",
     "migrate": "knex migrate:latest --knexfile src/backend/knexfile.js",
@@ -52,7 +52,9 @@
     "@google-cloud/storage": "^5.7.4",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
+    "@redux-devtools/extension": "^3.2.3",
     "axios": "^0.21.2",
+    "backend": "link:./src/backend",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -64,8 +66,10 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
     "form-data": "^4.0.0",
+    "frontend": "link:./src/frontend",
     "google-auth-library": "^7.0.3",
     "googleapis": "^79.0.0",
+    "immutable": "^4.1.0",
     "js-cookie": "^3.0.1",
     "knex": "^0.21.5",
     "md5": "^2.3.0",
@@ -74,6 +78,7 @@
     "nodemon": "^2.0.4",
     "pg": "^8.8.0",
     "pg-connection-string": "^2.4.0",
+    "prop-types": "^15.8.1",
     "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-datepicker": "^3.5.0",
@@ -82,6 +87,7 @@
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "typeface-ibm-plex-sans": "^1.1.13"
@@ -108,7 +114,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "babel-plugin-root-import": "^6.6.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -116,9 +121,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "esm": "^3.2.25",
-    "mocha": "^8.2.0",
-    "react-scripts": "3.4.3",
-    "redux-devtools-extension": "^2.13.8"
+    "mocha": "^8.2.0"
   },
   "packageManager": "yarn@3.3.0"
 }
