--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "/",
   "engines": {
     "node": "=16.*",
-    "yarn": "=2.*"
+    "npm": "please-use-yarn",
+    "yarn": ">=2.*"
   },
   "scripts": {
     "postinstall": "node fix.js",
@@ -25,7 +26,7 @@
     "docker:test": "docker-compose run --service-ports test-db ",
     "docker:dev": "docker-compose run --service-ports dev-db ",
     "dev": "yarn migrate && yarn seed && cross-env NODE_ENV=development nodemon --ignore ./src/frontend --ignore ./src/index.js --exec babel-node --only src/backend,lib src/backend/index.js",
-    "prebuild": "yarn build:frontend && node ./src/backend/scripts/generate-gcp-key.js",
+    "prebuild": "yarn build:frontend",
     "build": "yarn prebuild && cross-env NODE_ENV=production babel src/backend --out-dir lib --copy-files",
     "start": "cross-env NODE_ENV=production babel-node lib/index.js",
     "deploy": "fly deploy",
