Add prod migrate commands + correct table name

--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
     "seed:make": "knex seed:make --knexfile src/backend/knexfile.js",
     "migrate:make": "knex migrate:make --knexfile src/backend/knexfile.js",
     "development:migrate:rollback": "cross-env NODE_ENV=development knex migrate:rollback --knexfile src/backend/knexfile.js",
-    "production:migrate:rollback": "cross-env NODE_ENV=production knex migrate:rollback --knexfile src/backend/knexfile.js",
-    "production:migrate:latest": "cross-env NODE_ENV=production knex migrate:latest --knexfile src/backend/knexfile.js",
-    "production:seed": "cross-env NODE_ENV=production knex seed:run --knexfile src/backend/knexfile.js",
+    "prod:migrate:rollback": "cross-env NODE_ENV=production knex migrate:rollback --knexfile src/backend/knexfile.js",
+    "prod:migrate:down": "cross-env NODE_ENV=production knex migrate:down --knexfile src/backend/knexfile.js",
+    "prod:migrate:up": "cross-env NODE_ENV=production knex migrate:up --knexfile src/backend/knexfile.js",
+    "prod:migrate:list": "cross-env NODE_ENV=production knex migrate:list --knexfile src/backend/knexfile.js",
+    "prod:migrate:latest": "cross-env NODE_ENV=production knex migrate:latest --knexfile src/backend/knexfile.js",
+    "prod:seed": "cross-env NODE_ENV=production knex seed:run --knexfile src/backend/knexfile.js",
     "test:migrate:rollback": "cross-env NODE_ENV=test knex migrate:rollback --knexfile src/backend/knexfile.js",
     "test:migrate:latest": "cross-env NODE_ENV=test knex migrate:latest --knexfile src/backend/knexfile.js",
     "test:seed": "cross-env NODE_ENV=test knex seed:run --knexfile src/backend/knexfile.js"
