--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,6 +9,10 @@ jobs:
         node-version: [16.x]
     steps:
       - uses: actions/checkout@v3
+        - name: Add nodeLinker 
+        run: |
+          echo "nodeLinker: node-modules" >> .yarnrc.yml
+        working-directory: ${{ github.workspace }}
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
