--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,3 +36,5 @@ jobs:
         run: yarn test:seed
       - name: Run unit tests
         run: yarn test:unit
+      - name: Run integration tests
+        run: yarn test:integration
