--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -37,4 +37,4 @@ jobs:
       - name: Run unit tests
         run: yarn test:unit
       - name: Run integration tests
-        run: yarn test:integration
+        run: npm run test:integration
